# flightframe-telemetry-overlay

./: README.md  app.py  pyproject.toml  requirements.txt
examples/: dashboard.config.yaml  gauges.config.yaml
flightframe/: cli.py  config.py  csv_parser.py  dashboard.py  dji_srt_import.py  renderer.py
opendronelog_overlay/: ODL_2_AD.py  cli.py  config.py  csv_parser.py  dji_import.py  dji_srt_import.py  encoding.py  renderer.py  srt_exporter.py
tests/: test_config.py  test_dashboard.py  test_dji_srt_import.py  test_renderer.py
