[project]
name = "flightframe-telemetry-overlay"
version = "0.1.0"
description = "Flightframe: cinematic telemetry overlays and subtitles for drone videos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "opencv-python>=4.9.0",
  "numpy>=1.26.0",
  "polars>=1.6.0",
  "PyYAML>=6.0.0",
  "typer>=0.12.0",
  "imageio-ffmpeg>=0.6.0",
  # Streamlit <1.52 pinned protobuf<6, which breaks `djirecord` / pydjirecord (needs protobuf 6+ runtime).
  "streamlit>=1.52.0",
  "streamlit-drawable-canvas>=0.9.3",
  # Match pydjirecord-generated protos (e.g. virtual_stick.proto); must not be older than gencode.
  "protobuf>=6.31.1,<8",
]

[project.scripts]
flightframe = "flightframe.cli:app"
# Same implementation as `flightframe`; kept for backwards-compatible command name only.
opendronelog-overlay = "flightframe.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["flightframe*", "opendronelog_overlay*"]
